<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gSDK</name>
  <version>0.1.0</version>
  <description>Package to interface ROS 2 with PX4</description>

  <maintainer email="nuno.marques@dronesolutions.io">Nuno Marques</maintainer>
  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
